kubernetes/base/seq-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: seq
  labels:
    app: seq
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: seq
    tier: logging
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seq
  labels:
    app: seq
spec:
  selector:
    matchLabels:
      app: seq
      tier: logging
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: seq
        tier: logging
    spec:
      containers:
      - image: datalust/seq:latest
        name: seq
        ports:
        - containerPort: 80
          name: seq
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 250m
