kubernetes/base/ingress-deployment.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mysql-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
  - hosts:
    - mysql.test
    secretName: mysql-tls
  rules:
    - host: mysql.test
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: mysql
                port:
                  number: 30306
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adminer-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
  - hosts:
    - adminer.test
    secretName: adminer-tls
  rules:
    - host: adminer.test
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: adminer
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seq-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  tls:
  - hosts:
    - seq.test
    secretName: seq-tls
  rules:
    - host: seq.test
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: seq
                port:
                  number: 80
